# miRNA

./: .gitignore  HANDOFF.md  README.md  centroid.R  config.yaml  mRNA_centroid  miRNA_Download.R  miRNA_conversion.R  overall.R  process.py  pyproject.toml  stage.R
.github/workflows/: ci.yml
docs/: nsclc_metastasis_expression.md  nsclc_metastasis_spared_deletions.md  nsclc_multiomics_metastasis.md  nsclc_survival_screen.md
legacy/: ensemble_conversion.R  mutationAnalysis.R  preprocessing.R
scripts/: 01_mirna_subtype_signature.py  02_subtype_signature.py  03_mutation_analysis.py  04_survival.py  05_signature_survival.py  06_signature_overlap.py  07_nsclc_clinical.py  08_nsclc_expression_survival.py  09_survival_screen.py  10_mirna_survival_screen.py  11_cnv_mutation_screen.py  12_constellation_model.py  13_constellation_sparse.py  14_metastasis_spared_deletions.py  15_pancancer_spared_deletions.py  16_never_deleted_stage_iv.py  17_metastasis_expression_diff.py  18_metastasis_cnv_diff.py  19_metastasis_segment_cnv.py  20_arm_gene_drilldown.py  _bootstrap.py
src/mirna_tcga/: __init__.py  associate.py  biotab.py  cbioportal.py  classify.py  cohorts.py  config.py  endpoints.py  enrich.py  idmap.py  integrate.py  layers.py  mirbase.py  panels.py  preprocess.py  screen.py  segments.py  xena.py  (+1 more)
tests/: test_associate.py  test_biotab.py  test_cbioportal.py  test_classify.py  test_cmh.py  test_cohorts.py  test_endpoints.py  test_enrich.py  test_idmap.py  test_integrate.py  test_layers.py  test_mirbase.py  test_preprocess.py  test_screen.py  test_segments.py  test_xena.py
