[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirna-tcga"
version = "0.1.0"
description = "TCGA miRNA / mRNA / mutation analysis with clinical outcomes (cBioPortal + scikit-learn)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zhongning Chen" }]
dependencies = [
    "requests>=2.28",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# ID conversion (Ensembl / miRBase / Entrez <-> symbol)
idmap = ["mygene>=3.2", "pybiomart>=0.2"]
# Survival / clinical outcome modelling
survival = ["lifelines>=0.27"]
# Modern differential expression on raw counts (DESeq2 reimplementation)
de = ["pydeseq2>=0.4"]
# Development
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
